Add body and two password fields

--- a/passwordValidator.html
+++ b/passwordValidator.html
@@ -1,2 +1,11 @@
 <!Doctype HTML>
+<html>
+    <head>
+        <title> Password Validator </title>
+    </head>
 
+    <body>
+        Password: <input type='text' id='p1'>
+	Please Validate Password: <input type='text' id='p2'>
+    </body>
+</html>
