add javascript to document

--- a/passwordValidator.html
+++ b/passwordValidator.html
@@ -5,7 +5,18 @@
     </head>
 
     <body>
-        Password: <input type='text' id='p1'>
-	Please Validate Password: <input type='text' id='p2'>
+        Password: <input type='password' id='p1'>
+	<br>
+	Please Validate Password: <input type='password' id='p2'>
     </body>
+    <script>
+        function validate(){
+            var pass1 = document.getElementById('p1').value(); 
+            var pass2 = document.getElementById('p2').value();
+
+	    if (pass1 != pass2){
+	        alert('The passwords do not match');
+	    } 
+	}
+    </script>
 </html>
