--- a/passwordValidator.html
+++ b/passwordValidator.html
@@ -8,6 +8,8 @@
         Password: <input type='password' id='p1'>
 	<br>
 	Please Validate Password: <input type='password' id='p2'>
+	<br>
+	<button id='b1' value='Submit'>
     </body>
     <script>
         function validate(){
