Fix pass variables and link button to function

--- a/passwordValidator.html
+++ b/passwordValidator.html
@@ -9,16 +9,21 @@
 	<br>
 	Please Validate Password: <input type='password' id='p2'>
 	<br>
-	<button id='b1' value='Submit'>
+	<button onclick='validate()' id='b1' >Submit</button>
+		
     </body>
     <script>
         function validate(){
-            var pass1 = document.getElementById('p1').value(); 
-            var pass2 = document.getElementById('p2').value();
+            var pass1 = document.getElementById('p1').value; 
+            var pass2 = document.getElementById('p2').value;
 
 	    if (pass1 != pass2){
 	        alert('The passwords do not match');
 	    } 
+	    else{
+		alert('Your passwords matched');
+	    }
+
 	}
     </script>
 </html>
