--- a/slideshow.html
+++ b/slideshow.html
@@ -7,5 +7,9 @@
 	image:
         <img src='images/g1.jpeg' width='300' height='300'>
 
+	<br>
+	<button onclick='previous()' value='previous'>Previous</button>
+	<button onclick='next()' value='next'>Next</button>
+
     </body>
 </html>
