add link to javascript

--- a/slideshow.html
+++ b/slideshow.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>Slideshow</title>
+	<script type='text/javascript'
+		src='slideshow.js'>
+        </script>
     </head>
     <body>
-	image:
         <img src='images/g1.jpeg' width='300' height='300'>
 
 	<br>
