--- a/slideshow.html
+++ b/slideshow.html
@@ -7,7 +7,7 @@
         </script>
     </head>
     <body>
-        <img src='images/g1.jpeg' width='300' height='300'>
+        <img src='images/g1.jpeg' id='photo' width='300' height='300'>
 
 	<br>
 	<button onclick='previous()' value='previous'>Previous</button>
