change script header

--- a/slideshow.html
+++ b/slideshow.html
@@ -2,9 +2,7 @@
 <html>
     <head>
         <title>Slideshow</title>
-	<script type='text/javascript'
-		src='slideshow.js'>
-        </script>
+	<script	src='slideshow.js'></script>
     </head>
     <body>
         <img src='images/g1.jpeg' id='photo' width='300' height='300'>
