--- a/slideshow.html
+++ b/slideshow.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <title>Slideshow</title>
-	<script	src='slideshow.js'></script>
+	<script	type='text/javascript' src='slideshow.js'></script>
+	<meta charset='UTF-8'>
     </head>
     <body>
         <img src='images/g1.jpeg' id='photo' width='300' height='300'>
 
 	<br>
-	<button onclick='previous()' value='previous'>Previous</button>
-	<button onclick='next()' value='next'>Next</button>
+	<button onclick='previous()'>Previous</button>
+	<button onclick='next()'>Next</button>
 
     </body>
 </html>
