add password length checking

--- a/passwordValidator.html
+++ b/passwordValidator.html
@@ -17,7 +17,10 @@
             var pass1 = document.getElementById('p1').value; 
             var pass2 = document.getElementById('p2').value;
 
-	    if (pass1 != pass2){
+	    if (pass1.length < 8){
+		    alert('your password must be at least 8 characters long');
+	    }
+	    else if (pass1 != pass2){
 	        alert('The passwords do not match');
 	    } 
 	    else{
