Fix link to stylesheet

--- a/exercise3/profile.html
+++ b/exercise3/profile.html
@@ -3,7 +3,9 @@
 	<head>
 		<title>Profile</title>
 		<meta charset='UTF-8'>
-<style src='profile.css'>
+		<link href='profile.css'
+		      rel='stylesheet'
+		      type='text/css'/>
 	</head>
 	<body>
 		<div id='bio'>
