--- a/exercise3/profile.html
+++ b/exercise3/profile.html
@@ -10,11 +10,12 @@
 	<body>
 		<img src='profilepic.jpg'></img>
 		<div id='bio'>
+			<h2>Bio</h2>
 			<p>
 			My name is Jimmy. I love to build stuff. When I am building things, I often look up how to do things on <a href='http://google.com'>Google</a> to find written instructions and pictures demonstrating how to do things. When I want to see a video, I go to <a href='http://youtube.com'>Youtube.com</a>. When I need to buy supplies, I go to my favorite website to buy supplies: <a href='http://mcmaster.com'>McMaster.com</a>. Below you will find a video of one of my favorite pieces of <a href='https://www.mcmaster.com/hex-coupling-nuts'>hardware</a>. It is a coupling nut.</p>
 		</div>
 		<div id='links'>
-			<p>Favorite Sites on the Web</p>
+			<h2>Favorite Sites on the Web</h2>
 			<a href='http://google.com'>Google</a>
 			<a href='http://youtube.com'>Youtube</a>
 			<a href='http://mcmaster.com'>McMaster-Carr</a>
