Add h2 headings to video

--- a/exercise3/profile.html
+++ b/exercise3/profile.html
@@ -20,7 +20,7 @@
 			<a href='http://youtube.com'>Youtube</a>
 			<a href='http://mcmaster.com'>McMaster-Carr</a>
 		</div>
-		<p>
+		<h2>Video of Coupling Nut</h2>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/u2YZrxUrdWA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
