Change title and make profile picture a background image

--- a/exercise3/profile.html
+++ b/exercise3/profile.html
@@ -1,14 +1,15 @@
 <!Doctype HTML>
 <html>
 	<head>
-		<title>Profile</title>
+		<title>Jimmy's Profile</title>
 		<meta charset='UTF-8'>
 		<link href='profile.css'
 		      rel='stylesheet'
 		      type='text/css'/>
 	</head>
 	<body>
-		<img src='profilepic.jpg'></img>
+		<h1>Jimmy's Profile</h1>
+		<div id='pic'></div>
 		<div id='bio'>
 			<h2>Bio</h2>
 			<p>
