--- a/exercise4/paragraph.html
+++ b/exercise4/paragraph.html
@@ -10,29 +10,33 @@
 			src='script.js'></script>
 	</head>
 	<body>
-		<p>
+		<p id='paragraph'>
 		"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 		</p>
 		<div id='border'>
 			<h3>Border Attributes</h3>
 			Red<br>
-			<input type='text' id='bor_red' value='0-255'><br>	
+			<input type='text' id='bor_red' placeholder='0-255'><br>	
 			Green<br>
-			<input type='text' id='bor_green' value='0-255'><br>
+			<input type='text' id='bor_green' placeholder='0-255'><br>
 			Blue<br>
-			<input type='text' id='bor_blue' value='0-255'><br>
+			<input type='text' id='bor_blue' placeholder='0-255'><br>
 			Width<br>
-			<input type='text' id='bor_width' value='0-50'><br>
+			<input type='text' id='bor_width' placeholder='0-50'><br>
+			<button onclick='setBorder()'>
+				Set Border Attributes</button>
 		</div>
 		<div id='background'>
 			<h3>Background Color</h3>
 			Red<br>
-			<input type='text' id='back_red' value='0-255'><br>	
+			<input type='text' id='back_red' placeholder='0-255'><br>	
 			Green<br>
-			<input type='text' id='back_green' value='0-255'><br>
+			<input type='text' id='back_green' placeholder='0-255'><br>
 			Blue<br>
-			<input type='text' id='back_blue' value='0-255'><br>
-
+			<input type='text' id='back_blue' placeholder='0-255'><br>
+			<button onclick='setBack()'>
+				Set Backgound Color</button>
+			
 		</div>
 		
 	</body>
