--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<title>Homepage</title>
 	</head>
 	<body>
-		<a href='exercise1/profile.html'>exercise 1</a>
-		<a href='exercise2/profile.html'>exercise 2</a>
+		<a href='exercise1/passwordValidator.html'>exercise 1</a>
+		<a href='exercise2/slideshow.html'>exercise 2</a>
 		<a href='exercise3/profile.html'>exercise 3</a>
-		<a href='exercise4/profile.html'>exercise 4</a>
+		<a href='exercise4/paragraph.html'>exercise 4</a>
 	</body>
 	</body>
 	</body>
