change width placeholder

--- a/exercise4/paragraph.html
+++ b/exercise4/paragraph.html
@@ -22,7 +22,7 @@
 			Blue<br>
 			<input type='text' id='bor_blue' placeholder='0-255'><br>
 			Width<br>
-			<input type='text' id='bor_width' placeholder='0-50'><br>
+			<input type='text' id='bor_width' placeholder='#'><br>
 			<button onclick='setBorder()'>
 				Set Border Attributes</button>
 		</div>
